--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="css/index.html">
 </head>
 <body>
 <header>
 	
 </header>	
 <main>
+	
+
 	<section class="goods">
 		<div class="wrapper">
 			<div class="first_filtr_block d-flex font-weight-bold">
@@ -137,6 +140,9 @@
 							<h5>$49.99</h5>
 						</div>
 					</div>
+					<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 				</div>
 				<div class="item manufacturer" id='item'>
 					<div class="img">
@@ -147,6 +153,9 @@
 							<h5>$29.99</h5>
 						</div>
 					</div>
+								<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 				</div>
 				<div class="item manufacturer">
 					<div class="img">
@@ -157,6 +166,9 @@
 							<h5>$49.99</h5>
 						</div>
 					</div>
+								<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 				</div>
 				<div class="item">
 					<div class="img">
@@ -168,6 +180,9 @@
 							<h5>$39.99</h5>
 						</div>
 					</div>
+								<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 				</div>
 				<div class="item cellPhones apple">
 					<div class="img">
@@ -178,6 +193,9 @@
 							<h5>$899.99</h5>
 						</div>
 					</div>
+								<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 				</div>
 				<div class="item computers apple">
 					<div class="img">
@@ -188,6 +206,9 @@
 							<h5>$999.99</h5>
 						</div>
 					</div>
+								<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 				</div>
 				<div class="item cameras new">
 					<div class="img">
@@ -198,6 +219,9 @@
 							<h5>$19.99</h5>
 						</div>
 					</div>
+								<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 				</div>
 				<div class="item">
 					<div class="img">
@@ -209,6 +233,9 @@
 							<h5>$19.99</h5>
 						</div>
 					</div>
+								<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 				</div>
 				<div class="item">
 					<div class="img">
@@ -220,6 +247,9 @@
 							<h5>$49.99</h5>
 						</div>
 					</div>
+								<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 				</div>
 				<div class="item tv_audio bose" id='item'>
 					<div class="img">
@@ -230,6 +260,9 @@
 							<h6 class='text-muted'>White</h6>
 							<h5>$119.99</h5>
 						</div>
+									<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 					</div>
 				</div>
 				<div class="item tv_audio new" id='item'>
@@ -241,6 +274,9 @@
 							<h5>$49.99</h5>
 						</div>
 					</div>
+								<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 				</div>
 				<div class="item computers apple" id='item'>
 					<div class="img">
@@ -251,6 +287,9 @@
 							<h5>$899.99</h5>
 						</div>
 					</div>
+								<form>
+<input type="button" value="Кнопка" onClick='file:///C:/Users/GOITeens/Desktop/victor-myha/Internet-shop/css/index.html"'>
+</form>
 				</div>
 			</div>
 		</div>	
