Додаю сторінки з товарами

--- a/css/index.html
+++ b/css/index.html
@@ -3,28 +3,35 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style2.css">
 </head>
+
 <body>
 	<div class="story1">
-	
 
 
-	<div class="fotka1">
-	<img src="../img/1.png" alt="">
-</div>
-<div class="bada">
 
-<div class="wetra">
-		<p>Apple TV 32GB</p>
+		<div class="fotka1">
+			<img src="../img/1.png" alt="">
+		</div>
+		<div class="bada">
+
+			<div class="wetra">
+				<p>Apple TV 32GB</p>
+			</div>
+			<div class="pricess">
+				<p>Price : $49.99</p>
+			</div>
+			<div class="botor">
+				<p>Information about :</p>
+				<p>
+					TV is an important part of our lives. We are going to the front of the screen with family or friends, watching movies, sports shows and shows. But recently it became noticeable that television seemed to stop in development and is experiencing not the best of times. There was a turning point. It became obvious that the future of television - by applications. They appear on our screens more often and more often. We decided to go further and created a new platform - the tvOS operating system, which allows you to completely interact with the TV in a new way. This is the next generation of Apple TV, the next stage in the development of television.</p>
+
+			</div>
+
+		</div>
+
 	</div>
-<div class="pricess">
-	<p>Price : $49.99</p>
-</div>
-
-</div>
-
-</div>
 </body>
 </html>
 
