--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 	
 </header>	
 <main>
-	
-
+	<div class="register">
+		
+	</div>
 	<section class="goods">
 		<div class="wrapper">
 			<div class="first_filtr_block d-flex font-weight-bold">
@@ -392,7 +393,29 @@
 	</section>
 </main>
 <footer>
-	
+	<div class='upper_footer d-flex justify-content-between'>
+		<div class='portland'>
+			Portland
+		</div>
+		<div>
+			<ul class='font-weight-bold'>
+				<li>Home</li>
+				<li>Shop</li>
+				<li>Team</li>
+				<li>About us</li>
+				<li>Contacts</li>
+			</ul>
+		</div>
+		<div class='links'>
+			<i class="fab fa-twitter"></i>
+			<i class="fab fa-facebook-f"></i>
+			<i class="fab fa-google-plus-g"></i>
+		</div>
+	</div>
+	<div class='lower_footer d-flex justify-content-between'>
+		<div><p>She gave my mother such a turn, that I have always been convinced I am indebted to Miss Betsey for having been born on a Friday.</p></div>
+		<div class='spans'><span>Privacy Policy</span><span>Terms And Conditions</span></div>
+	</div>
 </footer>
 
 	<script type="text/javascript"> 
@@ -421,6 +444,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src='js/jquery-3.2.1.min.js'></script>
 	<script src="js/script.js"></script>
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 	
 </body>
 </html>
