Some media querries

--- a/index.html
+++ b/index.html
@@ -535,13 +535,13 @@
 				</div>
 				<div class="nums">
 					<div class="nums_item">1</div>
-					<div class="nums_item">2</div>
-					<div class="nums_item">3</div>
-					<div class="nums_item">4</div>
-					<div class="nums_item">5</div>
-					<div class="nums_item">6</div>
-					<div class="nums_item">7</div>
-					<div class="nums_item">8</div>
+					<div class="nums_item" onclick="sorry()">2</div>
+					<div class="nums_item" onclick="sorry()">3</div>
+					<div class="nums_item" onclick="sorry()">4</div>
+					<div class="nums_item" onclick="sorry()">5</div>
+					<div class="nums_item" onclick="sorry()">6</div>
+					<div class="nums_item" onclick="sorry()">7</div>
+					<div class="nums_item" onclick="sorry()">8</div>
 				</div>
 				<div class="right_arrow">
 					<i class="fas fa-arrow-right"></i>
