--- a/css/index3.html
+++ b/css/index3.html
@@ -4,9 +4,17 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="style2.css">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+	<link rel="stylesheet" href="bootstrap.css">
 </head>
 
 <body>
+
+	<div class="header">
+
+		Zendure 4-Port USB
+	</div>
+
 	<div class="story1">
 
 
@@ -22,17 +30,27 @@
 			<div class="pricess">
 				<p>Price : $49.99</p>
 			</div>
+			<div class="knopku">
+				<div class="knop">
+					<button type="button" class="btn btn-success"> Buy</button>
+				</div>
+				<div class="knop2">
+					<button type="button" class="btn btn-primary">Primary</button>
+				</div>
+			</div>
 			<div class="botor">
-				<p>Information about :</p>
-				<p>
-The Zendure A-Series 4-Port USB High-Speed Wall Charger with 4 ZEN+ Ports (4.2A 21W Max) is specially designed for people who travel with their electronics. It can charge most 5V USB chargeable devices, including external batteries, phones, tablets, music players, cameras, e-readers, smart watches and more. 					
-					</p>
+				<p id="infor">Information about :</p>
+				<p id="byba">
+					The Zendure A-Series 4-Port USB High-Speed Wall Charger with 4 ZEN+ Ports (4.2A 21W Max) is specially designed for people who travel with their electronics. It can charge most 5V USB chargeable devices, including external batteries, phones, tablets, music players, cameras, e-readers, smart watches and more.
+				</p>
 
 			</div>
 
 		</div>
 
 	</div>
+
+
 </body>
 </html>
 
